# SoftRenderer

./: .gitignore  Application.cpp  CMakeLists.txt  README.md
SoftRenderer/: Application.cpp  SoftRenderer.sln  SoftRenderer.vcxproj  SoftRenderer.vcxproj.filters
SoftRenderer/src/core/: CubeMap.cpp  PhongShader.cpp  Texture.cpp  camera.cpp  maths.cpp  model.cpp  pipeline.cpp
SoftRenderer/src/include/: CubeMap.h  Shader.h  SkyBox.h  TGAImage.h  Texture.h  camera.h  macro.h  maths.h  mesh.h  model.h  params.h  payload.h  pipeline.h  stb_image_impl.h
SoftRenderer/src/platform/: win32.cpp  win32.h
src/core/: PhongShader.cpp  maths.cpp  pipeline.cpp
src/include/: Shader.h  Texture.h  camera.h  model.h  object.h
src/platform/: win32.cpp
